# demo-file-storage-server

./: .gitignore  Dockerfile  README.md  compose-dev.yaml  pyproject.toml  requirements-prod.txt  requirements.txt
config/: config.json
file-server/: __init__.py
file_storage_server/: __init__.py  __main__.py  backend.py  cli.py  file_type.csv  main.py
ray-chunkit-chung-gum-gum-pistol/: README.md  pyproject.toml
tests/: test_backend.py  test_cli.py  test_main.py
